--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,23 @@
 /*  your css code here. If applicable */
+body{
+	background-color: #f5f5f5
+}
+.header{
+	background-color: #011e29;
+	color:white;
+	text-align:center;
+}
+.latest-news-section{
+	width:500px;
+	height:200px
+	}
+.Main-article{
+	.latest-news-section{
+	width:500px;
+	height:200px
+	}
+.img{
+	width:500px;
+	height:200px
+	}
+}
